<resources>
    <string name="app_name">News App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filled_heart">filledHeart</string>
    <string name="favourites">Favourites</string>
    <string name="headlines">Headlines</string>
    <string name="search">Search</string>
    <string name="search_hint">Search news…</string>
    <string name="no_internet">No Internet</string>
    <string name="retry">Retry</string>
    <string name="source">source</string>
    <string name="article_title">TITLE</string>
    <string name="articleImageDescription">Article Image</string>
    <string name="articleDescription">DESCRIPTION</string>
    <string name="date_time">DATE TIME</string>

</resources>